force-app/main/default/objects/Estimating_Assumption__c/Estimating_Assumption__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - This object contains assumptions against any request.</description>
    <label>Estimating Assumption</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Estimating Assumption ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimating Assumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>