force-app/main/default/objects/Estimating_Assumption__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Estimating Assumption</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>