force-app/main/default/objects/Estimating_Assumption__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Requet related to the Estimating Assumption</description>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Estimating Assumptions</relationshipLabel>
    <relationshipName>Estimating_Assumptions1</relationshipName>
    <type>Lookup</type>
</CustomField>